Added OpenAPI 3 UI to the application

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "Autowired",
         "Multipass"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
