Finished up chapter 05

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "Autowired",
-        "Multipass"
+        "Multipass",
+        "proxied"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
 }
