Updated chapter 09 reset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "OIDC",
         "Snyk",
         "kubectl",
+        "pocs",
         "proxied"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
